# deragotchi

./: README.md
backend/: CMakeLists.txt
backend/include/: deragotchi.h
backend/src/: deragotchi.cpp  main.cpp
frontend/: index.html  script.js  style.css
